docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/dockedsearchbar.mdx
---
title: DockedSearchBar
description: A Jetpack Compose DockedSearchBar component for displaying an inline search input.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI DockedSearchBar matches the official Jetpack Compose [SearchBar API](https://developer.android.com/develop/ui/compose/components/search-bar) and displays a search input that remains anchored in its parent layout rather than expanding to full screen.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/dockedsearchbar/android-light.webp"
  darkSrc="/static/images/expo-ui/dockedsearchbar/android-dark.webp"
  alt="Material 3 docked search bar with search icon and placeholder text"
/>

## Installation

<APIInstallSection />

## Usage

### Basic docked search bar

<ComponentExample
  title="BasicDockedSearchBarExample.tsx"
  src="/static/images/expo-ui/examples/dockedsearchbar-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/dockedsearchbar-basic-android-dark.webp"
  alt="An empty rounded search field with no placeholder text and no icon">

```tsx
import { useState } from 'react';
import { Host, DockedSearchBar } from '@expo/ui/jetpack-compose';

export default function BasicDockedSearchBarExample() {
  const [query, setQuery] = useState('');

  return (
    <Host matchContents>
      <DockedSearchBar onQueryChange={setQuery} />
    </Host>
  );
}
```

</ComponentExample>

### With placeholder and leading icon

Use the `DockedSearchBar.Placeholder` and `DockedSearchBar.LeadingIcon` slot components to customize the search bar appearance.

<ComponentExample
  title="DockedSearchBarWithSlotsExample.tsx"
  src="/static/images/expo-ui/examples/dockedsearchbar-slots-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/dockedsearchbar-slots-android-dark.webp"
  alt="A rounded search field with a magnifier icon and placeholder text reading Search items">

```tsx
import { useState } from 'react';
import {
  Host,
  DockedSearchBar,
  Text,
} from '@expo/ui/jetpack-compose';

export default function DockedSearchBarWithSlotsExample() {
  const [query, setQuery] = useState('');

  return (
    <Host matchContents>
      <DockedSearchBar onQueryChange={setQuery}>
        <DockedSearchBar.Placeholder>
          <Text>Search items...</Text>
        </DockedSearchBar.Placeholder>
        <DockedSearchBar.LeadingIcon>
          <Text>🔍</Text>
        </DockedSearchBar.LeadingIcon>
      </DockedSearchBar>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { DockedSearchBar } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/dockedsearchbar"
  apiName="DockedSearchBar"
/>
